2015-07-03: Ver. 0.2-6
  * Check autoloaded MPI symbol for  mac.
  * Change NAMESPACE for --as-cran.

2015-05-30: Ver. 0.2-6
  * Register comm.sort in S3method.
  * Modify Description.

2014-03-20: Ver. 0.2-6
  * Add bcast message.

2014-12-07: Ver. 0.2-6
  * Merge R_CallMethodDef for speeding up dynload problems.

2014-10-19: Ver. 0.2-6
  * Add is.finalized() for the CS problem.

2014-10-02: Ver. 0.2-5
  * Fix no visible binding for global variable problem.

2014-09-xx: Ver. 0.2-5
  * Implement two stages allreduce and allgather.

2014-08-23: Ver. 0.2-5
  * Add vignettes FAQ solution for MacOS 10.9.4, OpenMPI 1.8.1 and R 3.1.1.

2014-07-28: Ver. 0.2-5
  * Add comm.split.by.node().
  * Add comm.within and comm.between.

2014-06-30: Ver. 0.2-5
  * Add divide.job.vector() and divide.job.list().
  * Add LD_LIB_PATH to configure.ac and zzz.r.in.

2014-06-21: Ver. 0.2-5
  * Drop jss.cls and jss.bst.

2014-05-27: Ver. 0.2-4
  * Change to MPI_Comm_set_errhandler().
  * Fix Makevars.win logic.

2014-05-24: Ver. 0.2-3
  * Start official migration to MS-MPI.

2014-05-10: Ver. 0.2-3
  * Add logical and bit-wise AND, OR, XOR to allreduce() and reduce().
  * Improve comm.allcommon().

2014-05-04: Ver. 0.2-3
  * Add comm.as.gbd(), comm.pairwise(), and comm.dist().
  * The isend() non-blocking problems solved via buffering.

2014-04-01: Ver. 0.2-3
  * Fix a bcast() bug of unbalance call stack by switching to spmd.bcast.default
    for vectors of integer and double.

2014-03-22: Ver. 0.2-3
  * Adjust configure.ac and Makeconf for pbdSSLAP.

2014-03-11: Ver. 0.2-3
  * Add try options to task.pull().

2014-01-28: Ver. 0.2-3
  * Fix bcast() bugs.
  * Fix spmd.scatter.array() bugs.
  * Fix seed problem again.

2014-01-25: Ver. 0.2-2
  * Add comm.read.table(), comm.read.csv(), and comm.read.csv2(), and
    man pages and a section to vignettes.
  * Fix get.jid() option.
  * Fix bugs in comm.write.csv() and comm.write.csv2().

2014-01-20: Ver. 0.2-2